2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.target/aarch64/sve/mask_struct_store_3.c: Add
	-fno-vect-cost-model.
	* gcc.target/aarch64/sve/mask_struct_store_3_run.c: Likewise.
	* gcc.target/aarch64/sve/peel_ind_2.c: Likewise.
	* gcc.target/aarch64/sve/peel_ind_2_run.c: Likewise.
	* gcc.target/aarch64/sve/peel_ind_3.c: Likewise.
	* gcc.target/aarch64/sve/peel_ind_3_run.c: Likewise.

2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	PR c++/92206
	* g++.dg/cpp0x/alias-decl-pr92206-1.C: New test.
	* g++.dg/cpp0x/alias-decl-pr92206-2.C: Likewise.
	* g++.dg/cpp0x/alias-decl-pr92206-3.C: Likewise.

2019-11-13  Martin Liska  <mliska@suse.cz>

	* gcc.dg/params/params.exp: Restore test by parsing output
	of --help=params -Q.

2019-11-13  Jiufu Guo  <guojiufu@linux.ibm.com>

	PR target/92465
	* gcc.dg/pr47763.c: Add option -fweb.

2019-11-12  Nathan Sidwell  <nathan@acm.org>

	* g++.dg/cpp0x/using-enum-2.C: Adjust expected error text.
	* g++.dg/cpp0x/using-enum-3.C: Likewise.
	* g++.dg/lookup/using4.C: Likewise.
	* g++.dg/lookup/using7.C: Likewise.
	* g++.dg/template/using12.C: Likewise.
	* g++.dg/template/using18.C: Likewise.
	* g++.dg/template/using22.C: Likewise.

2019-11-12  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/92449
	* gcc.c-torture/compile/pr92449.c: New test.
	* gcc.target/powerpc/pr92449-1.c: New test.

2019-11-12  Tobias Burnus  <tobias@codesourcery.com>

	PR fortran/92470
	* gfortran.dg/ISO_Fortran_binding_17.c: New.
	* gfortran.dg/ISO_Fortran_binding_17.f90: New.
	* gfortran.dg/ISO_Fortran_binding_1.c (elemental_mult_c, allocate_c,
	section_c, select_part_c): Update for CFI_{address} changes;
	add asserts.

2019-11-12  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92412
	* gcc.dg/strlenopt-91.c: New test.

2019-11-12  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/35503
	* gcc.dg/tree-ssa/builtin-sprintf-warn-23.c: New test.

2019-11-12  Nathan Sidwell  <nathan@acm.org>
